src/objects/Products_China__c.object
<CustomObject>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material#</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line_Chinese__c</fullName>
        <label>Product Line(Chinese)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line_English__c</fullName>
        <label>Product Line(English)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_Chinese__c</fullName>
        <label>Product Name(Chinese)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_English__c</fullName>
        <label>Product Name(English)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product#</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sheen_Chinese__c</fullName>
        <label>Sheen(Chinese)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sheen_English__c</fullName>
        <label>Sheen(English)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_SKU__c</fullName>
        <label>Vendor SKU#</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Products(China)</label>
    <listViews>
        <fullName>All_ACTIVE_Products</fullName>
        <columns>NAME</columns>
        <columns>Product_Name_English__c</columns>
        <columns>Product_Name_Chinese__c</columns>
        <columns>Product_Line_English__c</columns>
        <columns>Product_Line_Chinese__c</columns>
        <columns>Sheen_English__c</columns>
        <columns>Sheen_Chinese__c</columns>
        <columns>Product__c</columns>
        <columns>Material__c</columns>
        <columns>Size__c</columns>
        <columns>Retail_Price__c</columns>
        <columns>Vendor_SKU__c</columns>
        <filterScope>Everything</filterScope>
        <label>All ACTIVE Products</label>
        <sharedTo>
            <group>China_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Product</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products(China)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>